# ComfyUI-TensorRT-Reforge

./: .gitignore  README.md  __init__.py  definitions.py  pyproject.toml  requirements.txt  trt_exporter.py  trt_loader.py  trt_utils.py  utils.py
js/: model_type_from_path.js
trt_diffusers/: anima_diffuser.py  base_diffuser.py
typings/onnx/: __init__.pyi  _mapping.pyi  checker.pyi  compose.pyi  external_data_helper.pyi  gen_proto.pyi  helper.pyi  inliner.pyi  model_container.pyi  numpy_helper.pyi  onnx_cpp2py_export.pyi  onnx_data_pb.pyi  onnx_data_pb2.pyi  onnx_ml_pb2.pyi  onnx_operators_ml_pb2.pyi  onnx_operators_pb.pyi  onnx_pb.pyi  parser.pyi  printer.pyi  serialization.pyi  shape_inference.pyi  utils.pyi  version.pyi  version_converter.pyi
typings/onnx/backend/: base.pyi
typings/onnx/defs/: __init__.pyi  gen_doc.pyi  gen_shape_inference_information.pyi
typings/onnx/reference/: __init__.pyi  op_run.pyi  reference_evaluator.pyi
typings/onnx/tools/: net_drawer.pyi  replace_constants.pyi  update_model_dims.pyi
typings/onnxruntime/: __init__.pyi
typings/onnxruntime/backend/: __init__.pyi  backend.pyi  backend_rep.pyi
typings/onnxruntime/capi/: _pybind_state.pyi  build_and_package_info.pyi  convert_npz_to_onnx_adapter.pyi  onnxruntime_collect_build_info.pyi  onnxruntime_inference_collection.pyi  onnxruntime_pybind11_state.pyi  onnxruntime_validation.pyi
typings/onnxruntime/datasets/: __init__.pyi
typings/onnxruntime/quantization/: __init__.pyi  base_quantizer.pyi  calibrate.pyi  matmul_bnb4_quantizer.pyi  matmul_nbits_quantizer.pyi  onnx_model.pyi  onnx_quantizer.pyi  preprocess.pyi  (+8 more)
typings/tensorrt/: __init__.pyi
typings/tensorrt_bindings/: __init__.pyi  tensorrt.pyi
typings/tensorrt_libs/: __init__.pyi
(+438 files in other folders)
