[project]
name = "comfyui-tensorrt-reforge"
description = "Building upon the excellent foundation of ComfyUI_TensorRT, this version focuses on full support for the Anima architecture and advanced TensorRT acceleration. It aims to push NVIDIA RTX™ GPU performance to its limits for the next generation of Stable Diffusion workflows."
version = "0.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zaochuan5854/ComfyUI_TensorRT"

[tool.comfy]
PublisherId = "zaochuan5854"
DisplayName = "ComfyUI-TensorRT-Reforge"
Icon = "⚡"
