[project]
name = "comfyui-tensorrt-reforge"
description = "High-speed TensorRT integration for ComfyUI with LoRA and Refit support, enabling fast inference without sacrificing model flexibility."
version = "0.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/zaochuan5854/ComfyUI-TensorRT-Reforge"

[tool.comfy]
PublisherId = "zaochuan5854"
DisplayName = "ComfyUI-TensorRT-Reforge"
